--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/x-icon" href="portfolioIcon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Evan's Portfolio</title>
     </head>
     <body>
-        
+        <p>Hi!</p>
     </body>
 
 </html> 
