--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <title>Evan's Portfolio</title>
     </head>
     <body>
-        <p>Hi!</p>
+        <div>
+            <a href="https://github.com/evanc7007">
+                <button type="button" >My Github</button>
+            </a>
+            
+        </div>
     </body>
 
 </html> 
