github and pingpong proj buttons

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <link rel="icon" type="image/x-icon" href="portfolioIcon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Evan's Portfolio</title>
+        <link rel="stylesheet" href="styling.css">
     </head>
     <body>
-        <div>
-            <a href="https://github.com/evanc7007">
-                <button type="button" >My Github</button>
+        <div class="buttons">
+            <a href="https://github.com/evanc7007" target="_blank">
+                <button id="github" type="button" >My Github!</button>
             </a>
-            
+            <a href="https://catalystproject.netlify.app/" target="_blank">
+                <button id="pingpong" type="button" >A Project!</button>
+            </a>
         </div>
     </body>
 
