massive overhaul including nav bar and screen by screen pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
         <link rel="stylesheet" href="styling.css">
     </head>
     <body>
+        <div class = "hero" id="hero">
+            <div class="heading1">
+                Hello, I'm <span id="name">Evan</span>.
+            </div>
+            <div class="heading2">
+                I'm a CS Student at Yale.
+            </div>
+            <a href="#about" class="heading_link">
+                <div class="view-arr">
+                    View my portfolio
+                </div>
+            </a>
+        </div>
+        <nav class="nav-bar">
+            <ul class="nav">
+                <li class="nav-item" id="nav-hero">
+                    <a class="link" href="#hero">Home</a>
+                </li>
+                <li class="nav-item" id="nav-about">
+                    <a class="link" href="#about">About</a>
+                </li>
+                <li class="nav-item" id="nav-links">
+                    <a class="link" href="#links">Links</a>
+                </li>
+            </ul>
+        </nav>
+        <section class="about" id="about">
+            <h2 class="about-head">About</h2>
+        </section>
         <div class="buttons">
             <a href="https://github.com/evanc7007" target="_blank">
                 <button id="github" type="button" >My Github!</button>
