added about and links section with some formatting

--- a/index.html
+++ b/index.html
@@ -36,15 +36,23 @@
         </nav>
         <section class="about" id="about">
             <h2 class="about-head">About</h2>
+            <div class="about-content">
+                <div class="profile">
+                    <p class="profile-text">TBD</p>
+                </div>
+            </div>
         </section>
-        <div class="buttons">
-            <a href="https://github.com/evanc7007" target="_blank">
-                <button id="github" type="button" >My Github!</button>
-            </a>
-            <a href="https://catalystproject.netlify.app/" target="_blank">
-                <button id="pingpong" type="button" >A Project!</button>
-            </a>
-        </div>
+        <section class="links" id="links">
+            <h2 class="link-head">Links</h2>
+            <div class="buttons">
+                <a href="https://github.com/evanc7007" target="_blank">
+                    <button id="github" type="button" >My Github!</button>
+                </a>
+                <a href="https://catalystproject.netlify.app/" target="_blank">
+                    <button id="pingpong" type="button" >A Project!</button>
+                </a>
+            </div>
+        </section>
     </body>
 
 </html> 
