--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <li class="nav-item" id="nav-about">
                     <a class="link" href="#about">About</a>
                 </li>
+                <li class="nav-item" id="nav-skills">
+                    <a class="link" href="#skills">Skills</a>
+                </li>
                 <li class="nav-item" id="nav-links">
                     <a class="link" href="#links">Links</a>
                 </li>
@@ -38,8 +41,14 @@
             <h2 class="about-head">About</h2>
             <div class="about-content">
                 <div class="profile">
-                    <p class="profile-text">TBD</p>
+                    <p class="profile-text">Ever curious and endlessly learning, I'm a student at Yale University with a profound love for programming. I am continually invested in solving puzzles and exploring Computer Science and Math. The challenge of shaping projects using creativity, technology, and various techniques motivates my passion for CS. In my free time I enjoy reading, cooking, and playing instruments.</p>
                 </div>
+            </div>
+        </section>
+        <section class="skills" id="skills">
+            <h2 class="skills-head">Skills</h2>
+            <div class="skills-content">
+                
             </div>
         </section>
         <section class="links" id="links">
