added extra content to profile blurb

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="about-head">About</h2>
             <div class="about-content">
                 <div class="profile">
-                    <p class="profile-text">Ever curious and endlessly learning, I'm a student at Yale University with a profound love for programming. I am continually invested in solving puzzles and exploring Computer Science and Math. The challenge of shaping projects using creativity, technology, and various techniques motivates my passion for CS. In my free time I enjoy reading, cooking, and playing instruments.</p>
+                    <p class="profile-text">Ever curious and endlessly learning, I'm a student at Yale University with a profound love for programming. I am continually invested in solving puzzles and exploring Computer Science and Math. The challenge of shaping projects using creativity, technology, and various techniques motivates my passion for CS. At Yale, I am part of <a class="club-link" href="https://yalecomputersociety.org/" target="_blank">y/cs</a>, the premier tech and computer science organization at the university. I am also part of <a class="club-link" href="https://campuspress.yale.edu/demos/" target="_blank">Demos</a>, an organization that is dedicated to teaching science to local New Haven elementary school students. At Yale, I work as a Student Tech, part of the <a class="club-link" href="https://studenttechnology.yale.edu/about-stc" target="_blank">STC</a>. As a Student Tech, my job is to assist undergraduate students with any issues relating to technology. In my free time I enjoy reading, cooking, and playing instruments.</p>
                 </div>
             </div>
         </section>
