skills section updated!!!

--- a/index.html
+++ b/index.html
@@ -48,7 +48,47 @@
         <section class="skills" id="skills">
             <h2 class="skills-head">Skills</h2>
             <div class="skills-content">
-                
+                <div class="skills-text-cont">
+                    <p class="skills-text">I gotta say something so this is a placeholder lowkey and I'll delete it later but Hi guys and welcome to my website.</p>
+                </div>
+                <div class="skills-row-cont">
+                    <div class="skills-row">
+                        <div class="skills-item">
+                            <img src="assets/java-icon.svg" alt=""/>
+                            <div class="skills-item-name">Java</div>
+                        </div>
+                        <div class="skills-item">
+                            <img src="assets/c-icon.svg" alt=""/>
+                            <div class="skills-item-name">C</div>
+                        </div>
+                        <div class="skills-item">
+                            <img src="assets/git-icon.svg" alt=""/>
+                            <div class="skills-item-name">Git</div>
+                        </div>
+                        <div class="skills-item">
+                            <img src="assets/nodejs-icon.svg" alt=""/>
+                            <div class="skills-item-name">Node.js</div>
+                        </div>
+                    </div>
+                    <div class="skills-row">
+                        <div class="skills-item">
+                            <img src="assets/html-icon.svg" alt=""/>
+                            <div class="skills-item-name">HTML</div>
+                    </div>
+                        <div class="skills-item">
+                            <img src="assets/css-icon.svg" alt=""/>
+                            <div class="skills-item-name">CSS</div>
+                        </div>
+                        <div class="skills-item">
+                            <img src="assets/javascript-icon.svg" alt=""/>
+                            <div class="skills-item-name">JavaScript</div>
+                        </div>
+                        <div class="skills-item">
+                            <img src="assets/react-icon.svg" alt=""/>
+                            <div class="skills-item-name">React</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="links" id="links">
