--- a/index.html
+++ b/index.html
@@ -93,15 +93,36 @@
         </section>
         <section class="links" id="links">
             <h2 class="link-head">Links</h2>
-            <div class="buttons">
-                <a href="https://github.com/evanc7007" target="_blank">
-                    <button id="github" type="button" >My Github!</button>
+            <div class="link-left">
+                <a class="s-link" href="https://github.com/evanc7007" target="_blank">
+                    <div class="link-container">
+                        <img class="image-size"src="assets/github-mark-white.svg" alt=""/>
+                        <div class="link-text">
+                            <h3 class="link-text-header">GitHub</h3>
+                            <p class="link-text-desc">Explore my projects and contributions on GitHub, which showcases a comprehensive list of my works.</p>
+                        </div>
+                    </div>
                 </a>
-                <a href="https://catalystproject.netlify.app/" target="_blank">
-                    <button id="pingpong" type="button" >A Project!</button>
+            </div>
+            <div class="link-right">
+                <a class="s-link" href="https://www.linkedin.com/in/evan-chen-yale/" target="_blank">
+                    <div class="link-container">
+                        <img class="image-size" src="assets/linkedin-app-white-icon.svg" alt=""/>
+                        <div class="link-text">
+                            <h3 class="link-text-header">LinkedIn</h3>
+                            <p class="link-text-desc">Connect with me on LinkedIn to learn more about my journey in software development.I'm eager to collaborate and learn.</p>
+                        </div>
+                    </div>
                 </a>
             </div>
         </section>
+        <footer class="footer">
+            <a class="heading_link" href="#hero">
+                <div class="home-button">
+                    Back to Top
+                </div>
+            </a>
+        </footer>
     </body>
 
 </html> 
