--- a/index.html
+++ b/index.html
@@ -115,14 +115,13 @@
                     </div>
                 </a>
             </div>
+            <footer class="footer">
+                <a class="heading_link" href="#hero">
+                    <div class="home-button">Back to Top</div>
+                </a>
+            </footer>
         </section>
-        <footer class="footer">
-            <a class="heading_link" href="#hero">
-                <div class="home-button">
-                    Back to Top
-                </div>
-            </a>
-        </footer>
+        
     </body>
 
 </html> 
