removed trailing slashes from stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="assets/portfolioIcon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Evan's Portfolio</title>
@@ -54,37 +54,37 @@
                 <div class="skills-row-cont">
                     <div class="skills-row">
                         <div class="skills-item">
-                            <img src="assets/java-icon.svg" alt=""/>
+                            <img src="assets/java-icon.svg" alt="">
                             <div class="skills-item-name">Java</div>
                         </div>
                         <div class="skills-item">
-                            <img src="assets/c-icon.svg" alt=""/>
+                            <img src="assets/c-icon.svg" alt="">
                             <div class="skills-item-name">C</div>
                         </div>
                         <div class="skills-item">
-                            <img src="assets/git-icon.svg" alt=""/>
+                            <img src="assets/git-icon.svg" alt="">
                             <div class="skills-item-name">Git</div>
                         </div>
                         <div class="skills-item">
-                            <img src="assets/nodejs-icon.svg" alt=""/>
+                            <img src="assets/nodejs-icon.svg" alt="">
                             <div class="skills-item-name">Node.js</div>
                         </div>
                     </div>
                     <div class="skills-row">
                         <div class="skills-item">
-                            <img src="assets/html-icon.svg" alt=""/>
+                            <img src="assets/html-icon.svg" alt="">
                             <div class="skills-item-name">HTML</div>
                     </div>
                         <div class="skills-item">
-                            <img src="assets/css-icon.svg" alt=""/>
+                            <img src="assets/css-icon.svg" alt="">
                             <div class="skills-item-name">CSS</div>
                         </div>
                         <div class="skills-item">
-                            <img src="assets/javascript-icon.svg" alt=""/>
+                            <img src="assets/javascript-icon.svg" alt="">
                             <div class="skills-item-name">JavaScript</div>
                         </div>
                         <div class="skills-item">
-                            <img src="assets/react-icon.svg" alt=""/>
+                            <img src="assets/react-icon.svg" alt="">
                             <div class="skills-item-name">React</div>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
             <div class="link-left">
                 <a class="s-link" href="https://github.com/evanc7007" target="_blank">
                     <div class="link-container">
-                        <img class="image-size"src="assets/github-mark-white.svg" alt=""/>
+                        <img class="image-size" src="assets/github-mark-white.svg" alt="">
                         <div class="link-text">
                             <h3 class="link-text-header">GitHub</h3>
                             <p class="link-text-desc">Explore my projects and contributions on GitHub, which showcases a comprehensive list of my works.</p>
@@ -107,7 +107,7 @@
             <div class="link-right">
                 <a class="s-link" href="https://www.linkedin.com/in/evan-chen-yale/" target="_blank">
                     <div class="link-container">
-                        <img class="image-size" src="assets/linkedin-app-white-icon.svg" alt=""/>
+                        <img class="image-size" src="assets/linkedin-app-white-icon.svg" alt="">
                         <div class="link-text">
                             <h3 class="link-text-header">LinkedIn</h3>
                             <p class="link-text-desc">Connect with me on LinkedIn to learn more about my journey in software development.I'm eager to collaborate and learn.</p>
